@@ -1,3 +1,5 @@
+import org.apache.tools.ant.taskdefs.condition.Os
+
 buildscript {
     repositories {
         mavenLocal()
@@ -19,9 +21,10 @@ plugins {
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
     id "de.undercouch.download" version "4.1.1"
-    id 'com.github.kt3k.coveralls' version '2.12.0'
+    id 'com.github.kt3k.coveralls' version '2.12.2'
     id 'com.palantir.git-version' version '0.12.3'
     id 'net.researchgate.release' version '3.0.2'
+    id "org.jetbrains.kotlin.jvm" version "1.8.21"
 }
 
 
@@ -58,12 +61,13 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
     testImplementation 'org.powermock:powermock-api-easymock:2.0.9'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
     //GROBID and grobid-quantities
-    implementation 'com.github.kermitt2:grobid-quantities:0.7.2'
-    implementation 'org.grobid:grobid-core:0.7.2'
-    implementation 'org.grobid:grobid-trainer:0.7.2'
-    implementation 'org.grobid:grobid-service:0.7.2'
+    implementation 'org.grobid:grobid-quantities:0.7.3'
+    implementation 'org.grobid:grobid-core:0.7.3'
+    implementation 'org.grobid:grobid-trainer:0.7.3'
+    implementation 'org.grobid:grobid-service:0.7.3'
     implementation "xerces:xercesImpl:2.12.0"
     implementation "net.arnx:jsonic:1.3.10"
     implementation "net.sf.saxon:Saxon-HE:9.6.0-9"
@@ -95,13 +99,23 @@ dependencies {
     implementation "io.dropwizard.metrics:metrics-servlets:4.0.0"
 
     //Misc
-    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.apache.httpcomponents:httpmime:4.5.13'
     implementation 'javax.activation:activation:1.1.1'
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
     implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
     implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.13.4'
+    
+    //Grobid-quantities
+    implementation 'tech.units:indriya:2.1.3'
+    implementation group: 'si.uom', name: 'si-units', version: '2.1'
+    implementation group: 'si.uom', name: 'si-quantity', version: '2.1'
+    implementation group: 'systems.uom', name: 'systems-quantity', version: '2.1'
+    implementation group: 'systems.uom', name: 'systems-common', version: '2.1'
+    implementation group: 'systems.uom', name: 'systems-unicode', version: '2.1'
+    implementation group: 'systems.uom', name: 'systems-ucum', version: '2.1'
+    implementation group: 'systems.uom', name: 'systems-unicode', version: '2.1'
 
     implementation 'org.dkpro.statistics:dkpro-statistics:2.2.1'
     implementation 'org.dkpro.statistics:dkpro-statistics-agreement:2.2.1'
@@ -125,9 +139,6 @@ configurations.all {
 }
 
 /** Other configuration **/
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
     //    options.compilerArgs << "-Xlint:deprecation"
@@ -140,6 +151,34 @@ sourceSets.main.resources {
 
 test {
     exclude '**/**IntegrationTest**'
+    useJUnitPlatform()
+    maxHeapSize = "1024m"
+
+    def libraries = ""
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        if (Os.OS_ARCH.equals("aarch64")) {
+            libraries = "${file("./grobid-home/lib/mac_arm-64").absolutePath}"
+        } else {
+            libraries = "${file("./grobid-home/lib/mac-64").absolutePath}"
+        }
+    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+        def jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64/jep"
+        libraries = jepDir
+        jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64"
+        libraries += ":" + jepDir
+    } else {
+        throw new RuntimeException("Unsupported platform!")
+    }
+
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED",
+            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.regex=ALL-UNNAMED",
+            "--add-opens", "java.base/java.math=ALL-UNNAMED",
+            "--add-opens", "java.base/java.text=ALL-UNNAMED"
+    }
+    systemProperty "java.library.path", "${System.getProperty('java.library.path')}:" + libraries
 }
 
 tasks.run.workingDir = rootProject.rootDir
@@ -148,6 +187,60 @@ mainClassName = 'org.grobid.service.GrobidSuperconductorsApplication'
 
 run {
     args = ['server', 'resources/config/config.yml']
+
+    def libraries = ""
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        if (Os.OS_ARCH.equals("aarch64")) {
+            libraries = "${file("../grobid-home/lib/mac_arm-64").absolutePath}"
+        } else {
+            libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
+        }
+    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+        libraries = "${file("../grobid-home/lib/lin-64/jep").absolutePath}:" +
+            "${file("../grobid-home/lib/lin-64").absolutePath}:"
+    } else {
+        throw new RuntimeException("Unsupported platform!")
+    }
+
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    }
+    workingDir = rootProject.rootDir
+    def javaLibraryPath = "${System.getProperty('java.library.path')}:" + libraries
+
+    systemProperty "java.library.path", javaLibraryPath
+}
+
+task integration(type: Test) {
+    include '**'
+
+    maxHeapSize = "1024m"
+
+    def libraries = ""
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        if (Os.OS_ARCH.equals("aarch64")) {
+            libraries = "${file("./grobid-home/lib/mac_arm-64").absolutePath}"
+        } else {
+            libraries = "${file("./grobid-home/lib/mac-64").absolutePath}"
+        }
+    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+        def jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64/jep"
+        libraries = jepDir
+        jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64"
+        libraries += ":" + jepDir
+    } else {
+        throw new RuntimeException("Unsupported platform!")
+    }
+
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+//        jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.util.regex=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.math=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.text=ALL-UNNAMED"
+    }
+    systemProperty "java.library.path", "${System.getProperty('java.library.path')}:" + libraries
 }
 
 
@@ -201,7 +294,7 @@ shadowJar {
 }
 
 jar {
-    enabled false
+    enabled true
 }
 
 artifacts {
@@ -212,7 +305,7 @@ artifacts {
 //distZip.archiveClassifier = 'application'
 //distTar.archiveClassifier = 'application'
 
-distZip.enabled = false
+distZip.enabled = true
 distTar.enabled = false
 shadowDistZip.enabled = false
 shadowDistTar.enabled = false
@@ -266,7 +359,7 @@ task downloadTransformers(dependsOn: copyModels) {
 
 
 wrapper {
-    gradleVersion "7.1.1"
+    gradleVersion "7.2"
 }
 
 jacocoTestReport {
